--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
+<!DOCTYPE html>
+   <html>
+      <head>
+         <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <title>Appilicous</title>
+         <link rel="stylesheet" href="css/main.css">
+      </head>
 
+
+
+
+
+      <body>
+         <!--Header-->
+         <header class="main-header">
+            <div class="container grid">
+               <div class="logo col">
+                  <img src="img/logo.svg" alt="Appilicous logo">
+               </div>
+               <nav class="main-nav col">
+                     <ul class="nav-list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Contact</a></li>
+                     </ul>
+               </nav>
+            </div>
+         </header>
+         <!--End Header-->
+
+         <!--Hero Area-->
+         <section class="hero">
+            <div class="container grid">
+               <div class="hero-text col">
+                  <h1 class="title-large"><span>Take your app to the</span> next level</h1>
+                  <p class="text-intro">The perfect landing page for your app, whatever it might be. Show off the apps features, show some sexy pictures and get more people do download it today.</p>
+                  <a href="#" class="btn btn--secondary">Learn More</a>
+                  <a href="#" class="btn btn--primary">Get The App</a>
+               </div>
+               <div class="col">
+                  <img src="img/phone.png" alt="" class="hero-img">
+               </div>
+            </div>
+         </section>
+         <!--End Hero Area-->
+
+         <!--Sales Points-->
+         <section class="sales-points">
+            <div class="container grid">
+               <h1>Promote Your App</h1>
+               <div class="sales-point col col--1-3">
+                  <img src="img/sales-responsive.png" alt="">
+                  <h2>Responsive Design</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit posuere finibus. Phasellus nibh lorem, cursus eu justo in, bibendum rutrum diam. </p>
+               </div>
+               <div class="sales-point col col--1-3">
+                  <img src="img/sales-hand.png" alt="">
+                  <h2>Easy to Set up</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit posuere finibus. Phasellus nibh lorem, cursus eu justo in, bibendum rutrum diam. </p>
+               </div>
+               <div class="sales-point col col--1-3">
+                  <img src="img/sales-graph.png" alt="">
+                  <h2>Great results</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit posuere finibus. Phasellus nibh lorem, cursus eu justo in, bibendum rutrum diam. </p>
+               </div>
+            </div>
+         </section>
+         <!--End Sales Points-->
+
+         <!-- Promo Section-->
+         <section class="promo">
+            <div class="title-box">
+               <h1>This app is amazing</h1>
+               <p>It does everything you didn’t know an app needed to do.</p>
+            </div>
+            <div class="grid">
+               <div class="col col--1-2 bg-primary">
+                  <h1>Doing great things for you</h1>
+                  <h2>Phasellus henrerit psoeuere</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus hendrerit posuere finibus. Phasellus nibh lorem, cursus eu justo in, bibendum rutrum diam.</p>
+                  Lorem ipsum dolor sit amet, consectetur. Phasellus hendrerit posuere finibus. Phasellus nibh lorem, cursus eu justo in, bibendum rutrum diam. </p>
+                  <a href="" class="btn btn--primary">Get the App</a>
+               </div>
+               <div class="col col--1-2 img-box lg-screen"></div>
+                  <img src="img/phone-in-hand.jpg" alt="Phone in Hand">
+            </div>
+         </section>
+         <!--End Promo Section-->
+
+         <!--CTA-->
+         <section class="cta">
+            <div class="container container--cta">
+               <p class="text-large">You made it to the bottom and you still aren’t sure?</p>
+               <h1 class="title-large">SHOWCASE THE GREATNESS today</h1>
+               <a href="" class="btn btn--primary">Get the app</a>
+            </div>
+          </section>
+         <!--End CTA-->
+
+         <!--Footer-->
+         <footer>
+            <div class="container container--footer">
+               <p class="title-footer">Take your app to the next level</p>
+               <ul class="unstyled-list social-links">
+                  <li><a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+                  <li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                  <li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                  <li><a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+               </ul>
+               <ul class="unstyled-list nav-footer">
+                  <li><a href="">Home</a></li>
+                  <li><a href="">About</a></li>
+                  <li><a href="">Blog</a></li>
+                  <li><a href="">Pricing</a></li>
+                  <li><a href="">Contact</a></li>
+              </ul>
+           </div>
+         </footer>
+         <!--End Footer-->
+
+
+
+
+
+          <script src="https://use.fontawesome.com/97974f9c24.js"></script>
+
+
+      </body>
+   </html>
